# mistyDM

./: Cargo.toml  flake.nix
src/: config.rs  consts.rs  lib.rs  main.rs  ui.rs
src/utils/: apps.rs  desktop_entries.rs  history.rs  mod.rs
